feat: new user subscription info endpoint added
